Tidied up input length trackers, attempted to fix overflow issues for links

--- a/portfolio/src/main/resources/static/css/stylesheet.css
+++ b/portfolio/src/main/resources/static/css/stylesheet.css
@@ -1284,3 +1284,9 @@ select.form-control {
     font-family: nexaLight !important;
 
 }
+
+.trim_text {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
